[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Cancel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Play/Yes.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Play/Play.gd" type="Script" id=3]
[ext_resource path="res://Assets/Vegetables/Default.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Play/Restart.gd" type="Script" id=5]
[ext_resource path="res://Assets/Themes/PopupTheme.tres" type="Theme" id=6]
[ext_resource path="res://Scripts/Play/Menu.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.545098, 0.254902, 1, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 0.046
anchor_top = 0.025
anchor_right = 0.23
anchor_bottom = 0.124
margin_left = 0.319996
margin_right = -208.4
margin_bottom = -208.0
texture_normal = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_top = 0.23
anchor_right = 1.0
anchor_bottom = 0.77
margin_left = 57.0
margin_right = -47.0
custom_constants/vseparation = 57
custom_constants/hseparation = 57
columns = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Vegetable1" type="TextureButton" parent="GridContainer"]
margin_right = 198.0
margin_bottom = 198.0
texture_normal = ExtResource( 4 )

[node name="Vegetable2" type="TextureButton" parent="GridContainer"]
margin_left = 255.0
margin_right = 453.0
margin_bottom = 198.0
texture_normal = ExtResource( 4 )

[node name="Vegetable3" type="TextureButton" parent="GridContainer"]
margin_left = 510.0
margin_right = 708.0
margin_bottom = 198.0
texture_normal = ExtResource( 4 )

[node name="Vegetable4" type="TextureButton" parent="GridContainer"]
margin_left = 765.0
margin_right = 963.0
margin_bottom = 198.0
texture_normal = ExtResource( 4 )

[node name="Vegetable5" type="TextureButton" parent="GridContainer"]
margin_top = 255.0
margin_right = 198.0
margin_bottom = 453.0
texture_normal = ExtResource( 4 )

[node name="Vegetable6" type="TextureButton" parent="GridContainer"]
margin_left = 255.0
margin_top = 255.0
margin_right = 453.0
margin_bottom = 453.0
texture_normal = ExtResource( 4 )

[node name="Vegetable7" type="TextureButton" parent="GridContainer"]
margin_left = 510.0
margin_top = 255.0
margin_right = 708.0
margin_bottom = 453.0
texture_normal = ExtResource( 4 )

[node name="Vegetable8" type="TextureButton" parent="GridContainer"]
margin_left = 765.0
margin_top = 255.0
margin_right = 963.0
margin_bottom = 453.0
texture_normal = ExtResource( 4 )

[node name="Vegetable9" type="TextureButton" parent="GridContainer"]
margin_top = 510.0
margin_right = 198.0
margin_bottom = 708.0
texture_normal = ExtResource( 4 )

[node name="Vegetable10" type="TextureButton" parent="GridContainer"]
margin_left = 255.0
margin_top = 510.0
margin_right = 453.0
margin_bottom = 708.0
texture_normal = ExtResource( 4 )

[node name="Vegetable11" type="TextureButton" parent="GridContainer"]
margin_left = 510.0
margin_top = 510.0
margin_right = 708.0
margin_bottom = 708.0
texture_normal = ExtResource( 4 )

[node name="Vegetable12" type="TextureButton" parent="GridContainer"]
margin_left = 765.0
margin_top = 510.0
margin_right = 963.0
margin_bottom = 708.0
texture_normal = ExtResource( 4 )

[node name="Vegetable13" type="TextureButton" parent="GridContainer"]
margin_top = 765.0
margin_right = 198.0
margin_bottom = 963.0
texture_normal = ExtResource( 4 )

[node name="Vegetable14" type="TextureButton" parent="GridContainer"]
margin_left = 255.0
margin_top = 765.0
margin_right = 453.0
margin_bottom = 963.0
texture_normal = ExtResource( 4 )

[node name="Vegetable15" type="TextureButton" parent="GridContainer"]
margin_left = 510.0
margin_top = 765.0
margin_right = 708.0
margin_bottom = 963.0
texture_normal = ExtResource( 4 )

[node name="Vegetable16" type="TextureButton" parent="GridContainer"]
margin_left = 765.0
margin_top = 765.0
margin_right = 963.0
margin_bottom = 963.0
texture_normal = ExtResource( 4 )

[node name="GameEndContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -62.5
margin_right = 390.0
margin_bottom = 62.5
theme = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameEndContainer"]
margin_right = 780.0
margin_bottom = 272.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="GameEndContainer/VBoxContainer"]
margin_right = 780.0
margin_bottom = 111.0
text = "Congratulations!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="GameEndContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 780.0
margin_bottom = 272.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameEndContainer/VBoxContainer/CenterContainer"]
margin_left = 30.0
margin_right = 750.0
margin_bottom = 111.0
custom_constants/separation = 125

[node name="Restart" type="Button" parent="GameEndContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 338.0
margin_bottom = 111.0
text = "Restart"
script = ExtResource( 5 )

[node name="Menu" type="Button" parent="GameEndContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 463.0
margin_right = 720.0
margin_bottom = 111.0
text = "Menu"
script = ExtResource( 7 )

[node name="ExitContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -62.5
margin_right = 390.0
margin_bottom = 62.5
theme = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="ExitContainer"]
margin_right = 780.0
margin_bottom = 272.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="ExitContainer/VBoxContainer"]
margin_right = 780.0
margin_bottom = 111.0
text = "Are you sure?"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="ExitContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 780.0
margin_bottom = 272.0

[node name="HBoxContainer" type="HBoxContainer" parent="ExitContainer/VBoxContainer/CenterContainer"]
margin_left = 180.0
margin_right = 599.0
margin_bottom = 111.0
custom_constants/separation = 125

[node name="Yes" type="Button" parent="ExitContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 162.0
margin_bottom = 111.0
text = "Yes"
script = ExtResource( 2 )

[node name="No" type="Button" parent="ExitContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 419.0
margin_bottom = 111.0
text = "No"

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable1" to="." method="_on_Vegetable1_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable2" to="." method="_on_Vegetable2_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable3" to="." method="_on_Vegetable3_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable4" to="." method="_on_Vegetable4_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable5" to="." method="_on_Vegetable5_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable6" to="." method="_on_Vegetable6_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable7" to="." method="_on_Vegetable7_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable8" to="." method="_on_Vegetable8_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable9" to="." method="_on_Vegetable9_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable10" to="." method="_on_Vegetable10_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable11" to="." method="_on_Vegetable11_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable12" to="." method="_on_Vegetable12_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable13" to="." method="_on_Vegetable13_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable14" to="." method="_on_Vegetable14_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable15" to="." method="_on_Vegetable15_pressed"]
[connection signal="pressed" from="GridContainer/Vegetable16" to="." method="_on_Vegetable16_pressed"]
[connection signal="pressed" from="GameEndContainer/VBoxContainer/CenterContainer/HBoxContainer/Restart" to="GameEndContainer/VBoxContainer/CenterContainer/HBoxContainer/Restart" method="_on_Restart_pressed"]
[connection signal="pressed" from="GameEndContainer/VBoxContainer/CenterContainer/HBoxContainer/Menu" to="GameEndContainer/VBoxContainer/CenterContainer/HBoxContainer/Menu" method="_on_Menu_pressed"]
[connection signal="pressed" from="ExitContainer/VBoxContainer/CenterContainer/HBoxContainer/Yes" to="ExitContainer/VBoxContainer/CenterContainer/HBoxContainer/Yes" method="_on_Yes_pressed"]
[connection signal="pressed" from="ExitContainer/VBoxContainer/CenterContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
